# cpp_projet_cmake

./: CMakeLists.txt  README.md
include/: myHeader.h
lib/: CMakeLists.txt  myLibrary.cpp
lib/inc/: myLibrary.h
source/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp  myHeader.cpp
